# deep_image_mosaicing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: descriptor.hpp  featureextractor.hpp  features.hpp  image.hpp  imagemosaicing.hpp  keypoint.hpp  libs.hpp  matcher.hpp  superpointextractor.hpp  utils.hpp
include/dtypes/: descriptor.hpp  estimatorres.hpp  features.hpp  keypoint.hpp  matchpair.hpp
include/estimator/: estimator.hpp
include/extractor/: featureextractor.hpp  superpointextractor.hpp
include/matcher/: bfmatcher.hpp  matcher.hpp
res/FRANKLIN/: franklin.qgz
res/icl_snippet/: K.txt
res/icl_snippet/matches/: 250.desc  250.feat  254.desc  254.feat  258.desc  258.feat  262.desc  262.feat  266.desc  266.feat  270.desc  270.feat  274.desc  274.feat  278.desc  278.feat  282.desc  282.feat  286.desc  286.feat  290.desc  290.feat  294.desc  294.feat  298.desc  298.feat  302.desc  302.feat  306.desc  306.feat  310.desc  310.feat  314.desc  314.feat  318.desc  318.feat  322.desc  322.feat  326.desc  326.feat  (+23 more)
res/icl_snippet/reconstruction_global/: Reconstruction_Report.html
res/icl_snippet/reconstruction_sequential/: Reconstruction_Report.html
res/tma/: franklins_WV02.tif
src/: CMakeLists.txt  imagemosaicing.cpp
src/extractor/: superpointextractor.cpp
src/matcher/: bfmatcher.cpp
